Fix so that the search input doesn't overlap the gallery.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -119,7 +119,7 @@ i {
 }
 
 #main.search {
-    margin-top: 104px;
+    padding-top: 104px;
 }
 
 /* Gallery */
